force-app/main/default/objects/Case/fields/FS_Buscar_Proyecto2__c.field-meta.xml
<CustomField>
    <fullName>FS_Buscar_Proyecto2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>FS_Proyecto__c</referenceTo>
    <relationshipLabel>Cases (Proyecto)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>