force-app/main/default/objects/Case/fields/FS_Cerrar_caso_en_Jira__c.field-meta.xml
<CustomField>
    <fullName>FS_Cerrar_caso_en_Jira__c</fullName>
    <label>Cerrar caso en Jira</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>