force-app/main/default/objects/Case/fields/FS_DiasAprobacionAnalisisPrevio__c.field-meta.xml
<CustomField>
    <fullName>FS_DiasAprobacionAnalisisPrevio__c</fullName>
    <label>Días aprobación Análisis Previo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>