force-app/main/default/objects/Case/fields/FS_DiasAprobacionEstimacionMacro__c.field-meta.xml
<CustomField>
    <fullName>FS_DiasAprobacionEstimacionMacro__c</fullName>
    <label>Días aprobación Estimación Macro</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>