force-app/main/default/objects/Case/fields/FS_DiasAprobacionPropuestaEconomica__c.field-meta.xml
<CustomField>
    <fullName>FS_DiasAprobacionPropuestaEconomica__c</fullName>
    <label>Días aprobación Propuesta Económica</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>