force-app/main/default/objects/Case/fields/FS_DiasAprobacionPropuestaServicio__c.field-meta.xml
<CustomField>
    <fullName>FS_DiasAprobacionPropuestaServicio__c</fullName>
    <label>Días aprobación Propuesta de Servicio</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>