force-app/main/default/objects/Case/fields/FS_DiasDEF__c.field-meta.xml
<CustomField>
    <fullName>FS_DiasDEF__c</fullName>
    <label>Días DEF</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>