force-app/main/default/objects/Case/fields/FS_DiasInvertidosEntregaCaso__c.field-meta.xml
<CustomField>
    <fullName>FS_DiasInvertidosEntregaCaso__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Días Invertidos en la Entrega del Caso</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>