force-app/main/default/objects/Case/fields/FS_DiasInvertidosTotalEntregaCaso__c.field-meta.xml
<CustomField>
    <fullName>FS_DiasInvertidosTotalEntregaCaso__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Días Invertidos Total en Entrega de Caso</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>