force-app/main/default/objects/Case/fields/FS_DiasProyecto__c.field-meta.xml
<CustomField>
    <fullName>FS_DiasProyecto__c</fullName>
    <label>Días Proyecto</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>