force-app/main/default/objects/Case/fields/FS_EnviarAnalisisN1__c.field-meta.xml
<CustomField>
    <fullName>FS_EnviarAnalisisN1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Analisis N1</label>
    <type>Checkbox</type>
</CustomField>