force-app/main/default/objects/Case/fields/FS_EnviarNotificacionCertificado__c.field-meta.xml
<CustomField>
    <fullName>FS_EnviarNotificacionCertificado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Notificación Certificado</label>
    <type>Checkbox</type>
</CustomField>