force-app/main/default/objects/Case/fields/FS_EnviarNotificacionEntregado__c.field-meta.xml
<CustomField>
    <fullName>FS_EnviarNotificacionEntregado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Notificación Entregado</label>
    <type>Checkbox</type>
</CustomField>