force-app/main/default/objects/Case/fields/FS_EnviarNotificacionProduccion__c.field-meta.xml
<CustomField>
    <fullName>FS_EnviarNotificacionProduccion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Notificación Producción</label>
    <type>Checkbox</type>
</CustomField>