force-app/main/default/objects/Case/fields/FS_EnvioNotificacion__c.field-meta.xml
<CustomField>
    <fullName>FS_EnvioNotificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío notificación</label>
    <type>Checkbox</type>
</CustomField>