force-app/main/default/objects/Case/fields/FS_EnvioNotificacionDEF__c.field-meta.xml
<CustomField>
    <fullName>FS_EnvioNotificacionDEF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío notificación DEF</label>
    <type>Checkbox</type>
</CustomField>