force-app/main/default/objects/Case/fields/FS_EnvioNotificacionEM__c.field-meta.xml
<CustomField>
    <fullName>FS_EnvioNotificacionEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío notificación EM</label>
    <type>Checkbox</type>
</CustomField>