force-app/main/default/objects/Case/fields/FS_EnvioNotificacionPE__c.field-meta.xml
<CustomField>
    <fullName>FS_EnvioNotificacionPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío notificación PE</label>
    <type>Checkbox</type>
</CustomField>