force-app/main/default/objects/Case/fields/FS_EnvioNotificacionPS__c.field-meta.xml
<CustomField>
    <fullName>FS_EnvioNotificacionPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío notificación PS</label>
    <type>Checkbox</type>
</CustomField>