force-app/main/default/objects/Case/fields/FS_EstadoAnterior__c.field-meta.xml
<CustomField>
    <fullName>FS_EstadoAnterior__c</fullName>
    <label>Estado Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>