force-app/main/default/objects/Case/fields/FS_esTesoreria__c.field-meta.xml
<CustomField>
    <fullName>FS_esTesoreria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>esTesoreria</label>
    <type>Checkbox</type>
</CustomField>