force-app/main/default/objects/Case/fields/FS_FechaAprobacionCliente__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaAprobacionCliente__c</fullName>
    <label>Fecha de Aprobación Cliente AP</label>
    <type>Date</type>
</CustomField>