force-app/main/default/objects/Case/fields/FS_FechaAprobacionClienteDEF__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaAprobacionClienteDEF__c</fullName>
    <label>Fecha de Aprobación cliente DEF</label>
    <type>Date</type>
</CustomField>