force-app/main/default/objects/Case/fields/FS_FechaAprobacionClienteEM__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaAprobacionClienteEM__c</fullName>
    <label>Fecha de Aprobación cliente EM</label>
    <type>Date</type>
</CustomField>