force-app/main/default/objects/Case/fields/FS_FechaAprobacionClientePE__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaAprobacionClientePE__c</fullName>
    <label>Fecha de Aprobación Cliente PE</label>
    <type>Date</type>
</CustomField>