force-app/main/default/objects/Case/fields/FS_FechaAprobacionClientePS__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaAprobacionClientePS__c</fullName>
    <label>Fecha de Aprobación Cliente PS</label>
    <type>Date</type>
</CustomField>