force-app/main/default/objects/Case/fields/FS_FechaCertificacionCliente__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaCertificacionCliente__c</fullName>
    <label>Fecha Certificación Cliente</label>
    <type>Date</type>
</CustomField>