force-app/main/default/objects/Case/fields/FS_FechaCompromisoEntrega__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaCompromisoEntrega__c</fullName>
    <label>Fecha Compromiso Entrega</label>
    <type>Date</type>
</CustomField>