force-app/main/default/objects/Case/fields/FS_FechaDesarrolloListo__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaDesarrolloListo__c</fullName>
    <label>Fecha Desarrollo Listo</label>
    <type>Date</type>
</CustomField>