force-app/main/default/objects/Case/fields/FS_FechaEntregaAnalisisPrevio__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaEntregaAnalisisPrevio__c</fullName>
    <label>Fecha Entrega Analisis Previo</label>
    <type>Date</type>
</CustomField>