force-app/main/default/objects/Case/fields/FS_FechaEntregaDEF__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaEntregaDEF__c</fullName>
    <label>Fecha Entrega DEF</label>
    <type>Date</type>
</CustomField>