force-app/main/default/objects/Case/fields/FS_FechaEntregaEstimacionMacro__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaEntregaEstimacionMacro__c</fullName>
    <label>Fecha Entrega Estimación Macro</label>
    <type>Date</type>
</CustomField>