force-app/main/default/objects/Case/fields/FS_FechaEntregaPropuestaEconomica__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaEntregaPropuestaEconomica__c</fullName>
    <label>Fecha Entrega Propuesta Económica</label>
    <type>Date</type>
</CustomField>