force-app/main/default/objects/Case/fields/FS_FechaEntregaPropuestaServicio__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaEntregaPropuestaServicio__c</fullName>
    <label>Fecha Entrega Propuesta de Servicio</label>
    <type>Date</type>
</CustomField>