force-app/main/default/objects/Case/fields/FS_FechaPuestaProduccionCliente__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaPuestaProduccionCliente__c</fullName>
    <label>Fecha Puesta Producción Cliente</label>
    <type>Date</type>
</CustomField>