force-app/main/default/objects/Case/fields/FS_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Issue_Type__c</fullName>
    <label>Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>