force-app/main/default/objects/Case/fields/FS_JiraCreated__c.field-meta.xml
<CustomField>
    <fullName>FS_JiraCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jira Creado</label>
    <type>Checkbox</type>
</CustomField>