force-app/main/default/objects/Case/fields/FS_NombrePropietario__c.field-meta.xml
<CustomField>
    <fullName>FS_NombrePropietario__c</fullName>
    <formula>Owner:User.FirstName &amp; Owner:Queue.QueueName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>