force-app/main/default/objects/Case/fields/FS_NombreProyecto2__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreProyecto2__c</fullName>
    <formula>FS_Buscar_Proyecto2__r.Name</formula>
    <label>Nombre Proyecto</label>
    <type>Text</type>
</CustomField>