force-app/main/default/objects/Case/fields/FS_NombreProyecto4__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreProyecto4__c</fullName>
    <formula>FS_Buscar_Proyecto4__r.Name</formula>
    <label>Nombre Proyecto</label>
    <type>Text</type>
</CustomField>