force-app/main/default/objects/Case/fields/FS_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Project_Id__c</fullName>
    <label>Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>