force-app/main/default/objects/Case/fields/FS_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>FS_Proyecto__c</fullName>
    <label>Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSHD001 - Fisa System Help desk</fullName>
            </value>
            <value>
                <fullName>FSDE238 - Precontratados BMR por 250 días Q2</fullName>
            </value>
            <value>
                <fullName>PNHD003 - OMNIA Help Desk</fullName>
            </value>
            <value>
                <fullName>FSHD010 - Fallas operativas Helpdesk Fisa System</fullName>
            </value>
            <value>
                <fullName>PNHD006 - Fallas operativas HLPDESK plataforma de negocios</fullName>
            </value>
            <value>
                <fullName>PNRE047 - Servicio Soporte Local BIT 2022-2023</fullName>
            </value>
            <value>
                <fullName>PNSO045 - Soporte remoto online Banking</fullName>
            </value>
            <value>
                <fullName>PNSO046 - Soporte remoto Online Banking</fullName>
            </value>
            <value>
                <fullName>FSDE257 - HD33196 PRECONTRATADOS 150 D/H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>