force-app/main/default/objects/Case/fields/FS_RequiereInformacionAdicional__c.field-meta.xml
<CustomField>
    <fullName>FS_RequiereInformacionAdicional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Requiere información adicional?</label>
    <type>Checkbox</type>
</CustomField>