force-app/main/default/objects/Case/fields/FS_Saldo_de_dias2__c.field-meta.xml
<CustomField>
    <fullName>FS_Saldo_de_dias2__c</fullName>
    <formula>FS_Buscar_Proyecto2__r.FS_Saldo_de_dias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo de días</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>