force-app/main/default/objects/Case/fields/FS_Tarifa_Dias_Hombre2__c.field-meta.xml
<CustomField>
    <fullName>FS_Tarifa_Dias_Hombre2__c</fullName>
    <formula>FS_Buscar_Proyecto2__r.FS_Tarifa_Dias_Hombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarifa Dias/Hombre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>