force-app/main/default/objects/Case/fields/FS_TipoRequerimiento__c.field-meta.xml
<CustomField>
    <fullName>FS_TipoRequerimiento__c</fullName>
    <label>Tipo de Requerimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Tiempo y Materiales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>