force-app/main/default/objects/Case/fields/FS_TotalUSDAnalisisPrevio__c.field-meta.xml
<CustomField>
    <fullName>FS_TotalUSDAnalisisPrevio__c</fullName>
    <formula>FS_Tarifa_Dias_Hombre__c *  FS_DiasAprobacionAnalisisPrevio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total USD Analisis Previo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>