force-app/main/default/objects/Case/fields/FS_TotalUSDEstimacionMacro__c.field-meta.xml
<CustomField>
    <fullName>FS_TotalUSDEstimacionMacro__c</fullName>
    <formula>FS_Tarifa_Dias_Hombre2__c  *  FS_DiasAprobacionEstimacionMacro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total USD Estimación Macro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>