force-app/main/default/objects/Case/fields/FS_TotalUSDPropuestaEconomica__c.field-meta.xml
<CustomField>
    <fullName>FS_TotalUSDPropuestaEconomica__c</fullName>
    <label>Total USD Propuesta Económica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>