force-app/main/default/objects/Case/fields/FS_TotalUSDPropuestaEconomicaF__c.field-meta.xml
<CustomField>
    <fullName>FS_TotalUSDPropuestaEconomicaF__c</fullName>
    <formula>FS_Tarifa_Dias_Hombre4__c *  FS_DiasAprobacionPropuestaEconomica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total USD Propuesta Económica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>